# src/backend/oracle-data-api/src/main/resources/occm-openapi-spec.yaml
@@ -523,6 +523,25 @@ components:
           format: nullable
         disputantSurnameNm:
           type: string
+        contactLawFirmNm:
+          type: string
+          format: nullable
+        contactGiven1Nm:
+          type: string
+          format: nullable
+        contactGiven2Nm:
+          type: string
+          format: nullable
+        contactGiven3Nm:
+          type: string
+          format: nullable
+        contactSurnameNm:
+          type: string
+          format: nullable        
+        contactTypeCd:
+          type: string
+        requestCourtAppearanceYn:
+          type: string
         disputeId:
           type: string
         disputeStatusTypeCd:
@@ -652,8 +671,13 @@ components:
         workPhoneNumberTxt:
           type: string
           format: nullable
-        contactTypeCd:
+        appearanceDtm:
           type: string
+          format: date-time
+          x-field-extra-annotation: "@com.fasterxml.jackson.annotation.JsonFormat(pattern=\"yyyy-MM-dd'T'HH:mm:ss'Z'\")"
+        appearanceLessThan14Days:
+          type: string
+          format: nullable        
           
       allOf:
         - $ref: '#/components/schemas/AuditBase'
